--- a/.github/workflows/codescan.yml
+++ b/.github/workflows/codescan.yml
@@ -18,12 +18,12 @@ on:
     - cron: '42 9 * * 6'
 
 permissions:
-  contents: read
+  contents: read, write
 
 jobs:
     CodeScan:
         permissions:
-          contents: read # for actions/checkout to fetch code
+          contents: read, write # for actions/checkout to fetch code
           security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
           actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
         runs-on: ubuntu-latest
